FIND_PROGRAM(PYTHON python)
FIND_PACKAGE(PythonLibs)
IF( EXISTS ${PYTHON_INCLUDE_PATH})
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  
  
  SET(INTERFACE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/easdif-python.i)
  
  SET_SOURCE_FILES_PROPERTIES(${INTERFACE_SRC} PROPERTIES CPLUSPLUS ON)
  
  SET(CMAKE_SWIG_FLAGS "-I${CMAKE_CURRENT_SOURCE_DIR}")
  SWIG_ADD_MODULE(eaSDIF python  ${INTERFACE_SRC}     )
  SWIG_LINK_LIBRARIES(eaSDIF ${PYTHON_LIBRARIES} Easdif${DEBUGEXT})
  ADD_CUSTOM_TARGET(pythonswig)
  ADD_DEPENDENCIES(pythonswig ${SWIG_MODULE_eaSDIF_REAL_NAME})
  ADD_DEPENDENCIES(${SWIG_MODULE_eaSDIF_REAL_NAME} ${SWIG_COMMON_EASDIF_SRC})
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/test.py.in ${CMAKE_CURRENT_BINARY_DIR}/test.py)
  IF(EXISTS ${PYTHON})
    ADD_CUSTOM_TARGET(check
      COMMAND echo Testing python swig interface
      COMMAND LD_LIBRARY_PATH=$(CMAKE_BINARY_DIR)/easdif ${PYTHON} ${CMAKE_CURRENT_BINARY_DIR}/test.py)
  ENDIF(EXISTS ${PYTHON})
  ENDIF(EXISTS ${PYTHON_INCLUDE_PATH}) 