FIND_PROGRAM(PYTHON python)
FIND_PACKAGE(PythonLibs)
IF( EXISTS ${PYTHON_INCLUDE_PATH})
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  SET(BUILD_WITH_INSTALL_RPATH ON)
  
  SET(INTERFACE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/easdif-python.i)
  
  SET_SOURCE_FILES_PROPERTIES(${INTERFACE_SRC} PROPERTIES CPLUSPLUS ON)
  
  SET(CMAKE_SWIG_FLAGS "-I${CMAKE_CURRENT_SOURCE_DIR}")
  SWIG_ADD_MODULE(eaSDIF python  ${INTERFACE_SRC}     )
  SWIG_LINK_LIBRARIES(eaSDIF ${PYTHON_LIBRARIES} Easdif${DEBUGEXT})
  ADD_CUSTOM_TARGET(pythonswig)
  ADD_DEPENDENCIES(pythonswig ${SWIG_MODULE_eaSDIF_REAL_NAME})
  ADD_DEPENDENCIES(${SWIG_MODULE_eaSDIF_REAL_NAME} ${SWIG_COMMON_EASDIF_SRC})
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/test.py.in ${CMAKE_CURRENT_BINARY_DIR}/test.py)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/example.py ${CMAKE_CURRENT_BINARY_DIR}/example.py)

  IF(EXISTS ${PYTHON})
    IF(APPLE)
      SET(LOADPATH DYLD_LIBRARY_PATH)
    ELSE (APPLE)
      IF(WIN32)
        SET(LOADPATH PATH)
      ELSE(WIN32)
        IF ( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
          SET(LOADPATH LD_LIBRARY_PATH)
        ENDIF( "${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
        IF ( "${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
          SET(LOADPATH DYLD_LIBRARY_PATH)
        ENDIF( "${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
      ENDIF(WIN32)
    ENDIF(APPLE)

    ADD_CUSTOM_TARGET(checkswig
      COMMAND echo Testing python swig interface
      COMMAND ${LOADPATH}=$(CMAKE_BINARY_DIR)/easdif ${PYTHON} ${CMAKE_CURRENT_BINARY_DIR}/test.py)
    ADD_DEPENDENCIES(checkswig pythonswig)
  ENDIF(EXISTS ${PYTHON})
ENDIF(EXISTS ${PYTHON_INCLUDE_PATH}) 

