dnl -*-m4-*- (He emacs, it's a m4 file)
dnl Process this file with autoconf to produce a configure script.

dnl To check if directory is present
AC_INIT(sdif/SdifGlobals.h)

dnl ############################################################
dnl PACKAGE NAME AND VERSION
AC_MSG_RESULT(PACKAGE NAME AND VERSION)
PACKAGE=SDIF
VERSION=3.2.0
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(sdif/config.h)

dnl ############################################################
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Check for librairies

dnl Check for headers
AC_MSG_RESULT(CHECK FOR HEADERS)
AC_HEADER_STDC
AC_CHECK_HEADERS( sys/types.h sys/stat.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(unistd.h)
AC_SUBST(IRCAMDEPS)
if test -f /u/formes/share/include/preincluded.h ; then
 IRCAMDEPS=ircam_deps
else
 IRCAMDEPS=;
fi

dnl ############################################################
dnl Particular compiler characteristics
AC_MSG_RESULT(PARTICULAR COMPILER CHARACTERISTICS)
dnl Check for BigEndian (WORDS_BIGENDIAN)
AC_C_BIGENDIAN 
dnl Check for Long 64 bits
AC_CHECK_SIZEOF(long)
	
dnl ############################################################
dnl Check for multi-character character constant inversion
AC_MSG_CHECKING(Multi-character character constant inversion)
AC_TRY_RUN([
#include <stdlib.h>
#include <stdio.h>
int main()
{
  const char ConstCharTab[] = {'A', 'B', 'C', 'D'};
  const unsigned int ConstDCBA = 'DCBA';
  unsigned int *ConstUIntTest;

  ConstUIntTest = (unsigned int*) ConstCharTab;

  if ((*ConstUIntTest) == ConstDCBA)
	return 0;
  else
	return 1;
}

	], multi_char_inversion=true, multi_char_inversion=false)
if test "$multi_char_inversion" = "true"; then
	AC_MSG_RESULT(yes)
	AC_DEFINE(MULTICHAR_CHAR_CONSTANT_INVERSION)
else
	AC_MSG_RESULT(no)
fi
dnl Variable affectation


dnl ############################################################
dnl CREATE OUTPUT FILES
AC_MSG_RESULT(CREATE OUTPUT FILES)
AC_OUTPUT(Makefile sdif/Makefile tools/Makefile tools/querysdif/Makefile tools/sdifextract/Makefile tools/sdiftotext/Makefile tools/tosdif/Makefile data/Makefile include/Makefile doc/Makefile doc/pics/Makefile doc/extern/Makefile doc/extern/cocoon/Makefile test/Makefile test/files/Makefile test/files/txt/Makefile test/files/sdif/Makefile test/files/txtw/Makefile test/files/sdifw/Makefile)

AC_MSG_RESULT(END OF CONFIGURATION)


