dnl -*-autoconf-*-  (No, it's an autoconf file!)
dnl -*-m4-*- (He emacs, it's a m4 file)
dnl $Id: configure.in,v 1.26 2002-12-20 11:59:54 schwarz Exp $
dnl
dnl configure.in		September 2000		Patrice Tisserand
dnl
dnl Source file for GNU autoconf, generates configure script.
dnl
dnl
dnl This file is part of the IRCAM SDIF Library (http://www.ircam.fr/sdif)
dnl
dnl Copyright (C) 1998, 1999, 2000 by IRCAM - Centre Pompidou, Paris, France.
dnl 
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Lesser General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl 
dnl See file COPYING for further informations on licensing terms.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU Lesser General Public License for more details.
dnl 
dnl You should have received a copy of the GNU Lesser General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
dnl
dnl For any information regarding this and other IRCAM software, please
dnl send email to:  sdif@ircam.fr


dnl $Log: not supported by cvs2svn $
dnl Revision 1.25  2002/11/27 17:59:19  roebel
dnl Added support for --enable-ftruncate option.
dnl
dnl Revision 1.24  2002/11/08 15:58:25  livshin
dnl Added support for exe extensions on cygwin
dnl
dnl Revision 1.23  2002/10/24 13:51:09  tisseran
dnl First version of SDIF library using libtool.
dnl It hasn't been tested since I can't compile at home.
dnl So I need to commit, for testing after logging on an ircam host....
dnl
dnl Revision 1.22  2002/10/11 10:20:59  tisseran
dnl Add spec fiel to create RPM.
dnl Change RELEASE number.
dnl TODO: Check the name of source archive (SDIF-3.7.1 or SDIF-3.7.1-src or sdif-3.7.1 ...)
dnl and change sdif.spec.in if necessary
dnl
dnl Revision 1.21  2002/10/10 14:31:28  roebel
dnl Removed remainings of TESTLIB
dnl
dnl Revision 1.20  2002/10/10 10:40:57  roebel
dnl Removed configure-variable @TESTLIB@ which can be derived from @SELLIB@.
dnl
dnl Revision 1.19  2002/10/07 12:24:14  roebel
dnl Fixed dependence with respect to include files in /u/formes/share/include for non ircam configuration
dnl
dnl Revision 1.18  2002/09/20 14:37:47  schwarz
dnl Bumped up version to 3.7.0 (reintroduced release number for small changes
dnl that don't change the API)
dnl
dnl Revision 1.17  2002/08/30 17:28:34  schwarz
dnl Added enable-option to compile with g++ to use the lib with easdif.
dnl
dnl Revision 1.16  2002/08/29 16:07:09  tisseran
dnl Add support of pkg-config for SDIF library.
dnl After installation, now you can use:
dnl pkg-config --cflags --libs sdif
dnl to have correct compilation flags
dnl
dnl Revision 1.15  2002/08/05 14:31:29  roebel
dnl Version 3.6
dnl
dnl Revision 1.14  2001/12/05 13:32:38  tisseran
dnl SDIF 3.5:
dnl Fix bug in preincluded,h and UniversalEnvVar.h
dnl Note: These files are in formesutils cvs project. For the distribution, files are copied
dnl from $FORMESROOT/include directory
dnl
dnl Revision 1.13  2001/07/12 14:11:46  roebel
dnl Added include file holding library version defines to the distribution.
dnl
dnl Revision 1.12  2001/05/02 09:34:37  tisseran
dnl Change License from GNU Public License to GNU Lesser Public License.
dnl
dnl Revision 1.11  2001/04/20 14:04:04  tisseran
dnl SDIF VERSION 3.3
dnl Create function: SdifTakeCodedPredefinedTypesfromString (SdifFile.[hc])
dnl This function is use to read types from the define string SDIFTYPES_STRING
dnl This string is generated by perl script xmltostyp.pl
dnl Types definition are in the sdiftypes.xml file.
dnl Change in preincluded.h to NOT INCLUDE host_architecture.h when using configure
dnl script.
dnl project_preinclude.h and configure.in have been changed according to new version number.
dnl
dnl Revision 1.10  2000/12/20 15:57:11  roebel
dnl Changed Version to 3.2.2. Added missing test files to distribution
dnl
dnl Revision 1.9  2000/11/21 16:34:45  roebel
dnl New SdifSignatureConst builds integer signature according to
dnl endianess of machine. Multicharacter constants are no longer
dnl supported by the library. Cleaned up sdif.h/SdifGlobals.h a bit.
dnl Test for Multicharacter conversion is removed from configure.in.
dnl
dnl Revision 1.8  2000/11/21 14:48:30  schwarz
dnl Nicer output for debug feature.
dnl
dnl Revision 1.7  2000/11/21 09:04:27  roebel
dnl Changed Makefile.am  in tools and sdif to properly use
dnl include files in $(topsrcdir)/sdif
dnl
dnl Revision 1.6  2000/10/30 20:05:12  roebel
dnl Changed debug option switch from -g to -g2
dnl
dnl Revision 1.5  2000/10/30  19:13:59  roebel
dnl Removed -g and added -O3 flags for configuration without --enable-debug
dnl
dnl Revision 1.4  2000/10/30  19:05:43  roebel
dnl Added support for relative path compilation (VPATH)
dnl Added support for debugging feature in configure.in and Makefiles
dnl
dnl Revision 1.3  2000/10/30  16:58:15  roebel
dnl removing sdif/sdif.h
dnl
dnl Revision 1.2  2000/10/27  20:02:45  roebel
dnl autoconf merged back to main trunk
dnl
dnl Revision 1.1.2.3  2000/10/26  17:27:17  schwarz
dnl Added header with copyright and links to all Makefile.am and configure.in.
dnl


dnl To check if directory is present
AC_INIT(sdif/SdifGlobals.h)

dnl ############################################################
dnl PACKAGE NAME AND VERSION
AC_MSG_RESULT(PACKAGE NAME AND VERSION)

PACKAGE=SDIF

SDIF_VERSION_MAJOR=3
SDIF_VERSION_MINOR=7
SDIF_VERSION_RELEASE=2

VERSION=$SDIF_VERSION_MAJOR.$SDIF_VERSION_MINOR.$SDIF_VERSION_RELEASE

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(SDIF_VERSION_MINOR)
AC_SUBST(SDIF_VERSION_MAJOR)
AC_SUBST(SDIF_VERSION_RELEASE)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(sdif/config.h)

dnl ############################################################
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Check for libtool
AC_PROG_LIBTOOL

dnl Check for librairies

dnl Check for headers
AC_MSG_RESULT(CHECK FOR HEADERS)
AC_HEADER_STDC
AC_CHECK_HEADERS( sys/types.h sys/stat.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(unistd.h)
AC_SUBST(IRCAMDEPS)
AC_SUBST(FORCE_CMP)
if test -f /u/formes/share/include/preincluded.h ; then
 IRCAMDEPS=ircam_deps
 FORCE_CMP=ircam_force_cmp
else
 IRCAMDEPS=;
 FORCE_CMP=;
fi

dnl ############################################################
dnl Particular compiler characteristics
AC_MSG_RESULT(PARTICULAR COMPILER CHARACTERISTICS)
dnl Check for BigEndian (WORDS_BIGENDIAN)
AC_C_BIGENDIAN 
dnl Check for Long 64 bits
AC_CHECK_SIZEOF(long)
	
dnl ############################################################
dnl Check for multi-character character constant inversion
dnl AC_MSG_CHECKING(Multi-character character constant inversion)
dnl AC_TRY_RUN([
dnl #include <stdlib.h>
dnl #include <stdio.h>
dnl int main()
dnl {
dnl   char ConstCharTab[] = {'A', 'B', 'C', 'D'};
dnl   const unsigned int ConstDCBA = 'DCBA';
dnl   unsigned int *ConstUIntTest;
dnl 
dnl   ConstUIntTest = (unsigned int*) ConstCharTab;
dnl 
dnl   if ((*ConstUIntTest) == ConstDCBA)
dnl 	return 0;
dnl   else
dnl 	return 1;
dnl }
dnl 
dnl 	], multi_char_inversion=true, multi_char_inversion=false)
dnl 
dnl if test "$multi_char_inversion" = "true"; then
dnl 	AC_MSG_RESULT(yes)
dnl 	AC_DEFINE(MULTICHAR_CHAR_CONSTANT_INVERSION)
dnl else
dnl 	AC_MSG_RESULT(no)
dnl fi

dnl ############################################################
dnl DEBUG feature

AC_SUBST(SELLIB)
AC_SUBST(PROGLIST)

AC_ARG_ENABLE(debug,
[--enable-debug            support additional library/programs with debug enabled],
[echo FEATURE enable-debug... $enableval; 
if test "$enableval" = "yes"; then
	SELLIB=libsdif-debug.la; CFLAGS="-g2";
	PROGLIST="querysdif-debug\$(EXEEXT) sdifextract-debug\$(EXEEXT) sdiftotext-debug\$(EXEEXT) tosdif-debug\$(EXEEXT)";
else 
	SELLIB=libsdif.la;  CFLAGS="-O3";
	PROGLIST="querysdif\$(EXEEXT) sdifextract\$(EXEEXT) sdiftotext\$(EXEEXT) tosdif\$(EXEEXT)";
fi ],
[
SELLIB=libsdif.la; CFLAGS="-O3";
PROGLIST="querysdif\$(EXEXT) sdifextract\$(EXEEXT) sdiftotext\$(EXEEXT) tosdif\$(EXEEXT)";
])

dnl ############################################################
dnl compile with g++

AC_SUBST(SELLIB)


AC_ARG_ENABLE(cpp,
[--enable-cpp              compile with g++ for C++ classes using the library],
[ dnl actions if enable-option given
  echo FEATURE enable-cpp... $enableval; 
  if test "$enableval" = "yes"; then
  dnl	SELLIB=libsdif-cpp.a; CFLAGS="-O3"; CC="g++"   ...debug for now
	SELLIB=libsdif-cpp.la; CFLAGS="-g2"; CC="g++"
  else
	dnl leave values unchanged
	dummy=stupid
  fi 
],
[ dnl actions if enable-option not given
  dummy=stupid
])

dnl ############################################################
dnl checks for library functions

AC_ARG_ENABLE(ftruncate,
[--enable-ftruncate        enable/disable use of ftruncate in sdif library],
[ dnl actions if enable-ftruncate given
echo FEATURE enable-ftruncate... $enableval; 
if test "$enableval" = "yes"; then
  AC_CHECK_FUNCS(ftruncate)
else
unset HAVE_FTRUNCATE;
fi
],
[ dnl actions if enable-ftruncate not given
echo FEATURE disable-ftruncate... $enableval; 
  AC_CHECK_FUNCS(ftruncate)
])

dnl ############################################################
dnl CREATE OUTPUT FILES
AC_MSG_RESULT(CREATE OUTPUT FILES)
AC_OUTPUT(Makefile 
sdif/Makefile 
tools/Makefile
data/Makefile 
include/Makefile 
include/sdif_version.h
doc/Makefile 
doc/pics/Makefile 
doc/extern/Makefile 
doc/extern/cocoon/Makefile 
test/Makefile 
test/files/Makefile 
test/files/txt/Makefile 
test/files/sdif/Makefile 
test/files/txtw/Makefile 
test/files/sdifw/Makefile 
test/files/sdifref/Makefile
sdif.pc 
sdif.spec)

AC_MSG_RESULT(END OF CONFIGURATION)


